force-app/main/default/objects/ResidentialLoanApplication/fields/SunsetTimestamp__c.field-meta.xml
<CustomField>
    <fullName>SunsetTimestamp__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The date time value to record when the application was entering the sunset period, to be used for stalled applications clean up operation. It is populated by Trigger and non editable from UI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SunsetTimestamp</label>
    <type>DateTime</type>
</CustomField>