force-app/main/default/objects/ResidentialLoanApplication/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The version of this loan</description>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>