force-app/main/default/objects/ResidentialLoanApplication/recordTypes/Loan_Application.recordType-meta.xml
<RecordType>
    <fullName>Loan_Application</fullName>
    <active>true</active>
    <label>Loan Application</label>
</RecordType>