force-app/main/default/objects/ResidentialLoanApplication/recordTypes/RLS.recordType-meta.xml
<RecordType>
    <fullName>RLS</fullName>
    <active>true</active>
    <description>Record Type for Loan Applications sourced from Retail Lending System (RLS)</description>
    <label>RLS</label>
</RecordType>