force-app/main/default/objects/ResidentialLoanApplication/validationRules/LoanPurposeTimeCannotBeOlder.validationRule-meta.xml
<ValidationRule>
    <fullName>LoanPurposeTimeCannotBeOlder</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false , Loan_Purpose_Updated_Date__c &lt;  PRIORVALUE(Loan_Purpose_Updated_Date__c))</errorConditionFormula>
    <errorDisplayField>Loan_Purpose_Updated_Date__c</errorDisplayField>
    <errorMessage>Last Updated Date cannot be older than the current value</errorMessage>
</ValidationRule>