force-app/main/default/objects/ResidentialLoanApplication/validationRules/NeedsAssessmentUpdateTimeCannotBeOlder.validationRule-meta.xml
<ValidationRule>
    <fullName>NeedsAssessmentUpdateTimeCannotBeOlder</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false , Needs_Assessment_Last_Updated_Date__c &lt;  PRIORVALUE(Needs_Assessment_Last_Updated_Date__c))</errorConditionFormula>
    <errorDisplayField>Needs_Assessment_Last_Updated_Date__c</errorDisplayField>
    <errorMessage>Last Updated Date cannot be older than the current value</errorMessage>
</ValidationRule>