force-app/main/default/objects/ResidentialLoanApplication/validationRules/UpdateAppProgressRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>UpdateAppProgressRestriction</fullName>
    <active>true</active>
    <description>You cannot change the Application Progress when Application Status is Capture, Ineligible, or Expired.</description>
    <errorConditionFormula>AND( NOT( $Setup.Salesforce_Library_Settings__c.Disable_VRs__c ) ,ISCHANGED( Application_Progress__c ) ,  Not( ISBLANK(Application_Progress__c) ), OR( ISPICKVAL( Status ,&quot;STATE_CAPTURE&quot;),ISPICKVAL( Status ,&quot;STATE_INELIGIBLE&quot;),ISPICKVAL( Status ,&quot;STATE_EXPIRED&quot;) )  )</errorConditionFormula>
    <errorMessage>You cannot change the Application Progress when Application Status is Capture, Ineligible, or Expired.</errorMessage>
</ValidationRule>