force-app/main/default/objects/ResidentialLoanApplication/listViews/All_ResidentialLoanApplications.listView-meta.xml
<ListView>
    <fullName>All_ResidentialLoanApplications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Application_Progress__c</columns>
    <columns>Originated_By__c</columns>
    <columns>CreatedDate</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Home Loan Applications</label>
</ListView>