force-app/main/default/objects/ResidentialLoanApplication/listViews/AllBrokerApplications.listView-meta.xml
<ListView>
    <fullName>AllBrokerApplications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Application_Progress__c</columns>
    <columns>CreatedDate</columns>
    <columns>Assisted_Broker__c</columns>
    <columns>Owner_Name__c</columns>
    <filters>
        <field>Assisted_Broker_TPMI_SAO__c</field>
        <operation>notEqual</operation>
    </filters>
    <filterScope>Everything</filterScope>
    <label>All Broker Home Loan Applications</label>
</ListView>