force-app/main/default/objects/ResidentialLoanApplication/listViews/Home_Loan_Applications_Queue_ResidentialLoanApplication.listView-meta.xml
<ListView>
    <fullName>Home_Loan_Applications_Queue_ResidentialLoanApplication</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Application_Progress__c</columns>
    <columns>Originated_By__c</columns>
    <columns>CreatedDate</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Queue</filterScope>
    <label>Home Loan Applications Queue</label>
    <queue>Home_Loan_Applications_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <role>BOH_Coach</role>
        <role>Coach_Lead</role>
    </sharedTo>
</ListView>