force-app/main/default/objects/ResidentialLoanApplication/listViews/My_Home_Loan_Applications.listView-meta.xml
<ListView>
    <fullName>My_Home_Loan_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Application_Progress__c</columns>
    <columns>Originated_By__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Owner_Name__c</columns>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>STATE_CAPTURE,STATE_APPROVED,STATE_REFERRED,STATE_SUBMITTED,STATE_CONFIRMED,STATE_SETTLEMENT_INITATED</value>
    </filters>
    <filterScope>Mine</filterScope>
    <label>My Home Loan Applications</label>
    <sharedTo>
        <role>BOH_Coach</role>
        <role>BOH_Coach_Lead</role>
        <role>Coach</role>
    </sharedTo>
</ListView>